backport: re PR rtl-optimization/30113 (ICE in trunc_int_for_mode)

Backport from mainline:
	2006-12-11  Zdenek Dvorak  <dvorakz@suse.cz>

	PR rtl-optimization/30113
	* loop-iv.c (implies_p): Require the mode of the operands to be
	scalar.

From-SVN: r129849